# neo-tg

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml
.env/: .dev.database.env  .dev.env
api/: entrypoint.sh  pyproject.toml
api/config/settings/: base.py  database.py  env.py  logging.py
api/docker/: Dockerfile.dev
api/env/: .env.dev
client/docker/: Dockerfile.dev
nginx/: Dockerfile  nginx.conf
