[tool.poetry]
name = "api"
version = "0.1.0"
description = "Api for neo-tg webservice."
authors = ["NeoTheBestDeveloper <neothebestmain@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pyright = "^1.1.329"
ruff = "^0.0.292"
isort = "^5.12.0"
pytest = "^7.4.2"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "cyclic-import",
    "unspecified-encoding",
    "redefined-outer-name",
    "useless-return",
    "W0511",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
color = true
line-length = 120

[tool.mypy]

[tool.pyright]
